@@ -41,6 +41,7 @@
 - syncronize handle_mounts() shutdown.
 - fix submount tree not all expiring.
 - add enable sloppy mount option to configure.
+- wait for master map to be available at start.
 
 25/07/2012 autofs-5.0.7
 =======================
